# Query_Sage_AI_hackathon_Project

./: .env.example  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  demo.tape  docker-compose.yml  requirements.txt
backend/: pyproject.toml
backend/app/: cli.py  config.py  database.py  fingerprint.py  keyring_store.py  main.py  middleware.py  migration_parser.py  models.py  observability.py  orm_detector.py  parser.py  pipeline.py  prompt.py  redactor.py  report.py  schemas.py  scoring.py  synthetic_injector.py  validator.py  what_if.py  workload.py
backend/app/connectors/: __init__.py  base.py  mysql.py  postgresql.py  sqlite.py
backend/app/routers/: analyze.py  audit.py  bulk.py  connections.py  history.py  lsp.py  metrics.py  natural_language.py  report.py  schema.py  score.py  settings.py
backend/app/rules/: __init__.py  additional.py  base.py  correctness.py  performance.py  schema_index.py  style.py
backend/querysage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/tests/: conftest.py  test_cognitive_complexity.py  test_fingerprint.py  test_orm_detector.py  test_pipeline.py  test_plan_parser.py  test_prompt_tool_use.py  test_security_middleware.py
backend/tests/fixtures/demo_queries/: terrible_query.sql
backend/tests/fixtures/plans/: aggregate_group_by.json  hash_join_spill.json  index_scan.json  nested_loop.json  seq_scan.json
backend/tests/rules/: test_additional_rules.py  test_correctness_rules.py  test_performance_rules.py  test_schema_index_rules.py  test_style_rules.py
docker/: Dockerfile.backend  (+5 more)
(+46 files in other folders)
