[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "querysage"
version = "0.1.0"
description = "QuerySage Database Intelligence Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "sqlglot>=25.0.0",
    "sqlparse>=0.4.4",
    "sqlalchemy>=2.0.0",
    "keyring>=24.0.0",
    "psycopg2-binary>=2.9.6",
    "mysql-connector-python>=8.0.33",
    "anthropic>=0.5.0",
    "httpx>=0.24.1",
    "click>=8.1.3",
    "rich>=13.4.2",
    "playwright>=1.35.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0.0",
    "pytest>=7.3.1",
    "sse-starlette>=1.6.1",
    "python-multipart>=0.0.12",
    "aiosqlite>=0.19.0"
]

[project.scripts]
querysage = "app.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
